<?xml version="1.0" encoding="utf-8"?>
<navigation
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/dashboardFragment">

    <fragment
        android:id="@+id/dashboardFragment"
        android:name="com.venegas.moneytracker.ui.dashboard.DashboardFragment"
        android:label="@string/nav_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/transactionsFragment"
        android:name="com.venegas.moneytracker.ui.transactions.TransactionsFragment"
        android:label="@string/nav_transactions"
        tools:layout="@layout/fragment_transactions" />

    <fragment
        android:id="@+id/statisticsFragment"
        android:name="com.venegas.moneytracker.ui.statistics.StatisticsFragment"
        android:label="@string/nav_statistics"
        tools:layout="@layout/fragment_statistics" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.venegas.moneytracker.ui.settings.SettingsFragment"
        android:label="@string/nav_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/addTransactionFragment"
        android:name="com.venegas.moneytracker.ui.transactions.AddTransactionFragment"
        android:label="@string/add_transaction"
        tools:layout="@layout/fragment_add_transaction">

        <argument
            android:name="transactionId"
            app:argType="long"
            android:defaultValue="-1L" />

        <argument
            android:name="isEditMode"
            app:argType="boolean"
            android:defaultValue="false" />
    </fragment>

</navigation>